# voxelGrid_filter_PCL_1.7

./: CMakeLists.txt  README.md  downsampled_model_cloud_PCL_1.7.2_cuboid_with_normals.ply.pcd  downsampled_model_cloud_PCL_1.7.2_scene_0_sensor_0.pcd.pcd
